--- a/themes/hyde/layouts/partials/sidebar.html
+++ b/themes/hyde/layouts/partials/sidebar.html
@@ -1,9 +1,9 @@
 <div class="sidebar">
-  <div class="container sidebar-sticky">
+  <div class="container">
     <div class="sidebar-about">
       <a href="{{ .Site.BaseURL }}"><h1>{{ .Site.Title }}</h1></a>
       <p class="lead">
-      {{ with .Site.Params.description }} {{.}} {{ else }}An elegant open source and mobile first theme for <a href="http://hugo.spf13.com">hugo</a> made by <a href="http://twitter.com/mdo">@mdo</a>. Originally made for Jekyll.{{end}}
+      {{ with .Site.Params.description }} {{.}} {{ else }}PhD Student @EPFL, Lausanne, Switzerland.{{end}}
       </p>
     </div>
 
@@ -14,6 +14,6 @@
       {{- end }}
     </ul>
 
-    <p>{{ with .Site.Params.copyright }}{{.}}{{ else }}&copy; {{ now.Format "2006"}}. All rights reserved. {{end}}</p>
+    <p>{{ with .Site.Params.copyright }}{{.}}{{ else }}&copy; {{ now.Format "2018"}}. All rights reversed. {{end}}</p>
   </div>
 </div>
