revert to old color-scheme

--- a/themes/coder/static/less/style.less
+++ b/themes/coder/static/less/style.less
@@ -1,26 +1,26 @@
-@bg-color: #292D3E;
-@fg-color: #bfc7d5;
+@bg-color: #fefefe;
+@fg-color: #323232;
 @darker-bg-color: #dcdcdc;
 @darker-fg-color: #000;
 @light-fg-color: #89DDFF;
-@link-color: #ffcb6b;
+@link-color: #3366CC;
 @p-red: #ff5370;
-@p-light-red: #ff869a;
-@p-dark-red: #BE5046;
+@p-light_red: #ff869a;
+@p-dark_red: #BE5046;
 @p-green: #C3E88D;
 @p-yellow: #ffcb6b;
-@p-dark-yellow: #F78C6C;
+@p-dark_yellow: #F78C6C;
 @p-blue: #82b1ff;
 @p-purple: #c792ea;
 @p-cyan: #89DDFF;
-@p-white: #bfc7d5;
+@p-white: #bfc7d5
 @p-black: #292D3E;
-@p-comment-grey: #697098;
-@p-gutter-fg-grey: #4B5263;
-@p-cursor-grey: #2C323C;
-@p-visual-grey: #3E4452;
-@p-menu-grey: #3E4452;
-@p-special-grey: #3B4048;
+@p-comment_grey: #697098;
+@p-gutter_fg_grey: #4B5263;
+@p-cursor_grey: #2C323C;
+@p-visual_grey: #3E4452;
+@p-menu_grey: #3E4452;
+@p-special_grey: #3B4048;
 @p-vertsplit: #181A1F;
 
 *,
@@ -51,7 +51,7 @@ body {
 
 a {
   font-weight: 700;
-  color: @p-white;
+  color: @darker-fg-color;
   text-decoration: none;
   &:focus,
   &:hover {
@@ -63,7 +63,7 @@ p {
   margin: 1.6rem 0 1.6rem 0;
   a {
     font-weight: 400;
-    color: @p-white;
+    color: @darker-fg-color;
     text-decoration: underline;
     text-underline-position: under;
     &:focus,
@@ -79,7 +79,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: @p-white;
+  color: @darker-fg-color;
   text-transform: uppercase;
   letter-spacing: 0.0625em;
   margin: 3.2rem 0 1.6rem 0;
