--- a/themes/hello-friend-ng/layouts/publications/single.html
+++ b/themes/hello-friend-ng/layouts/publications/single.html
@@ -33,6 +33,7 @@
 
             <div class="post-content">
                 {{ .Content }}
+                {{.Params.abstract}}
             </div>
         </article>
 
